# opl-ai-software-team

./: .containerignore  .dockerignore  .env.example  .gitignore  CHANGELOG.md  Containerfile  Containerfile.backend  Containerfile.dev.backend  Containerfile.dev.skills  Containerfile.dev.validator  Containerfile.frontend  E2E_TESTING_PLAN.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  Makefile  PACKAGING.md  POST_MORTEM.md  README.md  RELEASE.md  SKILLS_SERVICE_PLAN.md  app.py  compose.dev.yaml  compose.yaml  config.yaml  domain.xml  dump_openapi.py  index.html  keycloak.xml  pytest.ini  ruff.toml  unknown
agent/: .env.example  ARCHITECTURE.md  Containerfile  DESIGN_SPECS_GUIDE.md  Makefile  QUICKSTART.md  README.md  TESTING.md  compose.yml  config.encrypted.example.yaml  config.example.yaml  config.yaml  docker-compose.yml  mkdocs.yml  pyinstaller.spec  pyproject.toml  pytest.ini  run_app.py  run_tests.sh  run_with_pythonpath.sh
agent/docs/: index.md
agent/docs/architecture/: design.md
agent/docs/deployment/: github-pages.md  health-checks.md  secure-config-patterns.md
agent/docs/getting-started/: configuration.md  ollama.md  quickstart.md
agent/docs/guide/: llm-configuration.md
agent/docs/stylesheets/: extra.css
agent/docs/testing/: overview.md
agent/hooks/: README.md  hook-ai_software_dev_crew.py  hook-jsonschema.py
agent/scripts/: package.bat  package.sh  run_devops_agent_real.py
agent/src/ai_software_dev_crew/: crew.py  main.py
agent/src/llamaindex_crew/: __init__.py  main.py  web
agent/tests/: __init__.py  conftest.py  test_file_tools.py  test_migration_agent_large_files.py
agent/tests/api/: test_agents_endpoint.py  test_backends_endpoints.py  (+9 more)
(+380 files in other folders)
